# data-dword

./: data-dword.cabal
src/Data/: DoubleWord.hs
