Name: data-dword
Version: 0.3.2.1
Category: Data
Stability: experimental
Synopsis: Stick two binary words together to get a bigger one
Description:
  This package provides Template Haskell utilities for declaring fixed-length
  binary word data types. Signed and unsigned 96, 128, 160, 192, 224, and
  256-bit types are predefined.

Homepage: https://github.com/mvv/data-dword
Bug-Reports: https://github.com/mvv/data-dword/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2011-2019 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Extra-Source-Files:
  README.md

Tested-With: GHC==7.6.3, GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.2,
             GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2,
             GHC==9.2.7, GHC==9.4.5, GHC==9.6.1

Cabal-Version: >= 1.10.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-dword.git

Library
  Default-Language: Haskell2010
  Build-Depends:
    base             >= 4.6 && < 5,
    hashable         >= 1.1,
    data-bword       >= 0.1,
    ghc-prim
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.DoubleWord
  Other-Modules:
    Data.DoubleWord.Base

